--- a/.htaccess
+++ b/.htaccess
@@ -8,4 +8,4 @@ RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -d
 RewriteRule ^ - [L]
 
 # If the requested resource doesn't exist, use index.html
-RewriteRule ^ /dreamhome/
+RewriteRule ^ /teaching/
